--- a/sale/styles/main.css
+++ b/sale/styles/main.css
@@ -261,10 +261,10 @@ h5 {
     list-style: none;
 }
 .bottom ul li {
-    margin: 12px 0;
+    margin: 16px 0;
     font-size: 16px;
     position: relative;
-    padding-left: 23px;
+    padding-left: 26px;
 }
 .bottom ul li:last-child {
     margin-bottom: 0;
